style.css
:root {
  --primaryBrandColor: #b22519;
  --primaryTextColor: #000000;
  /* TODO use the next color for hero links, contacts, jobs */
  --interactiveTextColor: #437cb7;
  --primaryBackgroundColor: rgb(249, 249, 249);
  --secondaryBackgroundColor: rgb(255, 255, 255);
  --primaryTitleFontFamily: "Days One", sans-serif;
  --primaryTextFontFamily: "Cairo", sans-serif;
}

/* Global Rules */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: var(--primaryTextFontFamily);
}

html {
  line-height: 1.15; /* 1 */
  -webkit-text-size-adjust: 100%; /* 2 */
  height: 100%;
}

body {
  min-height: 100%;
}

ul {
  list-style: none;
}

main {
  display: block;
}
h1 {
  font-size: 2em;
  margin: 0;
}
a {
  background-color: transparent;
}
abbr[title] {
  border-bottom: none; /* 1 */
  text-decoration: underline; /* 2 */
  text-decoration: underline dotted; /* 2 */
}
img {
  border-style: none;
}
button {
  font-family: inherit; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}
button {
  /* 1 */
  overflow: visible;
}
button {
  /* 1 */
  text-transform: none;
}
button,
[type="button"] {
  -webkit-appearance: button;
}
button::-moz-focus-inner,
[type="button"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}
button:-moz-focusring,
[type="button"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}
[hidden] {
  display: none;
}

/* Global Classes */

.container {
  max-width: 1720px;
  width: 90%;
  /* background-color: red; */
  margin: auto;
  /* width: 70%; */
  min-height: 100vh;
}

.row {
  display: flex;
  flex-direction: row;
}

.page-section {
  min-height: 100vh;
  background-repeat: no-repeat;
}

.title-font {
  font-family: var(--primaryTitleFontFamily);
}

.z-index-1 {
  z-index: 500;
}

.z-index-2 {
  z-index: 1000;
}

.z-index-3 {
  z-index: 1500;
}

.section-h1 {
  font-size: 72px;
  line-height: 135px;
  font-style: normal;
  font-weight: normal;
}

.section-h2 {
  font-style: normal;
  font-weight: normal;
  font-size: 35px;
  line-height: 66px;
}

.section-p {
  font-style: normal;
  font-weight: normal;
  font-size: 35px;
  line-height: 52px;
}

/* The widely used Overlay */
#overlay {
  position: fixed; /* Sit on top of the page content */
  display: none; /* Hidden by default */
  width: 100%; /* Full width (cover the whole page) */
  height: 100%; /* Full height (cover the whole page) */
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;

  /* cursor: pointer; Add a pointer on hover */
}

.blurryEffect {
  background-color: rgba(
    255,
    255,
    255,
    0.8
  ); /* white background with opacity */
  -webkit-backdrop-filter: blur(15px) !important;
  -moz-backdrop-filter: blur(15px) !important;
  -ms-backdrop-filter: blur(15px) !important;
  -o-backdrop-filter: blur(15px) !important;
  backdrop-filter: blur(15px) !important;
}

/* Header & Hamburger Menu */

#hamburger-menu {
  position: absolute;
  top: 72px;
  right: 100px;
}

#hamburger-menu button {
  display: flex;
  justify-content: center;
  align-items: center;
  background: transparent;
  border: none;
  border-radius: 12%;
  padding: 5px;
  cursor: pointer;
  transition: background-color 100ms;
}

#hamburger-menu button:hover {
  background-color: rgba(0, 0, 0, 15%);
}

#hamburger-menu button svg rect {
  transition: fill 100ms;
}

#hamburger-menu button:hover svg rect {
  fill: white;
}

#hamburger-menu nav {
  display: none;
}

#hamburger-menu nav ul {
  --paddingX: 68px;
  --paddingY: 48px;
  background: black;
  position: absolute;
  top: 10px;
  right: 0;
  padding-top: var(--paddingY);
  padding-bottom: var(--paddingY);
  border-radius: 10px;
  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.25);
  transition: top 500ms, opacity 500ms;
  opacity: 0;
}
#hamburger-menu nav ul .nav-item {
  font-style: normal;
  font-weight: normal;
  font-size: 35px;
  line-height: 201.9%;
  text-decoration: none;
  font-weight: 400;
  text-align: center;
  padding-right: var(--paddingX);
  padding-left: var(--paddingX);
  display: block;
  transition: background-color 250ms;
}

#hamburger-menu nav ul .nav-item:not(.selected):hover {
  background-color: rgba(255, 255, 255, 15%);
}

#hamburger-menu nav ul .nav-item.selected {
  font-weight: 700;
  cursor: default;
}
#hamburger-menu nav ul li {
  color: white;
}

/* Hero Section */
.page-section#hero {
  background-image: url(./assets/images/backgrounds/1.png);
  background-color: var(--primaryBackgroundColor);
  background-size: 66% auto;
  background-position: left top;
}

#hero .container {
  display: flex;
  justify-content: center;
  align-items: center;
}

#hero .row {
  justify-content: space-between;
  align-items: center;
}

#hero #img-container.col {
  width: 65%;
}

#hero article.col {
  width: 33%;
}

#hero #img-container {
  max-width: 1130px;
  height: auto;
  position: relative;
}

#hero #img-container::before {
  content: "";
  width: 100%;
  aspect-ratio: 1130 / 680;
  border: black 1px solid;
  box-sizing: border-box;
  position: absolute;
  top: -15%;
  left: -8%;
  z-index: 0;
}

#hero #img-container img {
  width: 100%;
  display: block;
  position: relative;
  z-index: 10;
}

#hero article h1 {
  font-family: Days One;
  font-style: normal;
  font-weight: normal;
  font-size: 97px;
  line-height: 147px;
  color: var(--primaryBrandColor);
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none; /* Safari */
  -khtml-user-select: none; /* Konqueror HTML */
  -moz-user-select: none; /* Old versions of Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
  user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}

#hero article p {
  font-family: Cairo;
  font-style: normal;
  font-weight: normal;
  font-size: 35px;
  line-height: 53px;
  color: var(--primaryTextColor);
}
#hero article p a {
  text-decoration: none;
  color: var(--interactiveTextColor);
}
/* ... */

